ui/scss/component/_media.scss
//  M E D I A
//  T H U M B

.media__thumb {
  @include thumbnail;
  position: relative;
  border-radius: var(--border-radius-thumbnail);
  object-fit: cover;
  background-color: var(--color-placeholder-background);
  background-position: center;
  background-repeat: no-repeat;
  background-size: cover;
  box-shadow: 0px 0px 0px 1px rgba(var(--color-primary-dynamic), 0.3) inset;

  will-change: box-shadow;
  will-change: background-size;
}

//  M E D I A
//  T I T L E

.media__uri {
  position: absolute;
  transform: translateY(-130%);
  display: flex;
  font-size: var(--font-xsmall);
  color: var(--color-text-subtitle);
  font-weight: var(--font-weight-base);

  @media (max-width: $breakpoint-small) {
    position: static;
    transform: none;
    margin-bottom: var(--spacing-xs);
    max-width: 100%;
    white-space: nowrap;
  }
}

//  M E D I A
//  S U B T I T L E

.media__subtitle {
  align-self: flex-start;
  color: var(--color-text-subtitle);
  font-size: var(--font-small);
}

.media__subtitle--centered {
  @extend .media__subtitle;
  align-self: auto;
  align-items: center;
  display: flex;
}

.media__subtitle--between {
  @extend .media__subtitle;
  display: flex;
  justify-content: space-between;
  align-items: flex-end;
  flex-direction: row;
  flex-wrap: wrap;

  @media (max-width: $breakpoint-medium) {
    display: block;
  }
}

.media__info-text {
  word-break: break-word;

  &:not(:last-of-type) {
    margin-bottom: var(--spacing-m);
  }

  &.media__info-text--constrained {
    max-width: 50rem;
    font-size: var(--font-small);
  }
}

.media__info-text--contracted {
  margin-top: var(--spacing-m);
  max-height: 5rem;
  overflow: hidden;
  font-size: var(--font-small);
}

.media__info-text--expanded {
  margin-top: var(--spacing-m);
  max-height: auto;
  font-size: var(--font-small);
}

.media__info-text--contracted,
.media__info-text--expanded {
  max-width: 50rem;
}

.media__info-text--fade {
  -webkit-mask-image: -webkit-gradient(linear, left 30%, left bottom, from(rgba(0, 0, 0, 1)), to(rgba(0, 0, 0, 0)));
  overflow-wrap: anywhere;
}

.media__info-expand {
  margin-top: var(--spacing-s);
}

.media__info-text-preview {
  @extend .media__info-text;

  max-height: 5rem;
  overflow: auto;
  padding: var(--spacing-xxs) 0; // for scrollbar to auto-hide
}

.media__actions {
  @include font-sans;
  position: relative;
  display: flex;
  flex-wrap: wrap;
  margin-top: 0;

  > *:not(:last-child) {
    margin-right: var(--spacing-m);
  }

  .button {
    &:hover {
      color: var(--color-primary);
      //background-color: var(--color-background);

      svg {
        stroke: var(--color-primary);
      }
    }
  }

  .button-like {
    &:hover {
      color: var(--color-fire);

      svg {
        stroke: var(--color-fire);
      }
    }
  }

  .button-dislike {
    &:hover {
      color: var(--color-slime);

      svg {
        stroke: var(--color-slime);
      }
    }
  }

  .ratio-wrapper {
    position: relative;
    width: 100%;
    margin-right: 0px;

    .ratio-bar {
      position: absolute;
      display: flex;
      left: 0px;
      bottom: -1px;
      width: calc(100% - 14px);
      height: 1px;
      background-color: white;
      z-index: 2;

      .ratio-bar-like {
        height: 1px;
        background-color: var(--color-fire);
      }

      .ratio-bar-dislike {
        height: 1px;
        background-color: var(--color-slime);
      }
    }

    .button-dislike {
      float: right;
    }
  }

  @media (max-width: $breakpoint-small) {
    //padding-top: var(--spacing-s);

    > * {
      margin-right: var(--spacing-s);
      margin-bottom: var(--spacing-s);
    }
  }
}

.media__details {
  @extend .help;
  font-size: var(--font-xxsmall);
  display: flex;
  flex-direction: column;
  margin-bottom: var(--spacing-s);
  color: var(--color-text);

  &:not(:last-child) {
    margin-bottom: var(--spacing-s);
  }
}

